API Key Rotation and Revocation (#243)
* Add Key.blacklist flag with filter and tests

* Click commands to blacklist & reactivate apikeys

* Blacklist by key or email, refactor click command code, add more tests

* Move create_new_apikey to auth, lint-free tests!

* Add rotate_key, refactor tests

* Click command to rotate a key

* Add key rotation endpoint

* Return unauthorized when requesting /api/v1/apikey if previously blacklisted

* Fix tests after rebase

* Add new endpoint to openapi spec

* Remove old reference to API_VERSION constant

* Fix linting

* Fix tests
